--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A small project to manage documents like Markdown.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,8 +20,10 @@
   },
   "homepage": "https://github.com/Thony-dev-pro/visualMarkdown#readme",
   "dependencies": {
+    "cors": "^2.8.6",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.1.5"
+    "mongoose": "^9.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
